# esp32

./: .gitignore  .gitmodules  README.md  esp-idf-v4.4.patch  idf-v4.4-tinyusb-hid-kconfig.patch  idf-v4.4-tinyusb-hid.patch  tinyusb-espidf-v4.4.patch
EmBCI_Sandbox/: 0build.sh  1flash.sh  Makefile  firmware  main
Temprature/: Makefile
espbase/: CMakeLists.txt  README.md  helper.py  nvs_flash.csv  partitions-16m.csv  partitions-8m.csv  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.camera  sdkconfig.defaults.esp32s3  sdkconfig.defaults.flash16  sdkconfig.defaults.flash8  sdkconfig.defaults.release  sdkconfig.defaults.v4  sdkconfig.defaults.v5
espbase/main/: CMakeLists.txt  Kconfig.projbuild  avcmode.c  btdev.c  bthost.c  btmode.c  commands.cpp  config.c  config.h  console.c  console.h  console_cmds.cpp  drivers.c  drivers.h  filesys.c  filesys.cpp  filesys.h  globals.h  hidtool.c  idf_component.yml  ledmode.c  main.c  main.cpp  network.c  network.h  scndrv.c  scngui.c  scnlvgl.c  sensors.c  server.c  server.cpp  server.h  timesync.c  update.c  update.h  usbdev.c  usbhost.c  usbmode.c  usbmode.h  usbmoded.c  (+2 more)
espbase/main/compat/: tusb_config.h
espbase/main/include/: avcmode.h  avutils.h  btmode.h  config.h  console.h  drivers.h  filesys.h  globals.h  hiddesc.h  hidtool.h  ledmode.h  network.h  screen.h  sensors.h  server.h  timesync.h  update.h  usbmode.h
get-started/: CMakeLists.txt  manager.py  nvs_flash.csv  partitions.csv  sdkconfig
patches/: arduino-esp32-v2.0.9-tinyusb.patch
ranger/: VL53L0X-1.0.4-cp37-cp37m-linux_armv7l.whl  test-tof.py
(+143 files in other folders)
